...
                Row(
                  children: [
                    Expanded(
                      child: buildInserimentoDate(
                        context,
                        controller: controller.dalGiornoController,
                        label: "Data Inizio",
                        onTap: () => controller.selectDate(
                          context,
                          controller.dalGiornoController,
                          isStart: true,
                        ),
                        enabled: controller.cittaController.text.isNotEmpty,
...

                    const SizedBox(width: 8),
                    Expanded(
                      child: buildInserimentoOrario(
                        context,
                        controller: controller.dalleOreController,
                        label: "Ora Inizio",
                        onTap: () => controller.selectTime(
                          context,
                          controller.dalleOreController,
                          isStart: true,
                        ),
                        enabled: controller.dalGiornoController.text.isNotEmpty,
...
                Row(
                  children: [
                    Expanded(
                      child: buildInserimentoDate(
                        context,
                        controller: controller.alGiornoController,
                        label: "Data Fine",
                        onTap: () => controller.selectDate(
                          context,
                          controller.alGiornoController,
                          isStart: false,
                        ),
                        enabled:
...

                    const SizedBox(width: 8),
                    Expanded(
                      child: buildInserimentoOrario(
                        context,
                        controller: controller.alleOreController,
                        label: "Ora Fine",
                        onTap: () => controller.selectTime(
                          context,
                          controller.alleOreController,
                          isStart: false,
                        ),
                        enabled: controller.alGiornoController.text.isNotEmpty,
...
      child: Stack(
        children: [
          GooglePlaceAutoCompleteTextField(
            textEditingController: controller.cittaController,
            googleAPIKey: dotenv.env['GOOGLE_API_KEY'] ?? '',
            inputDecoration: InputDecoration(
              hintText: controller.isLoadingLocation ? "" : "Cerca Città/Rileva Posizione",
              hintStyle: TextStyle(color: AppColors.hintText(context)),
              border: InputBorder.none,
              prefixIcon: Icon(
                Icons.travel_explore,
                size: 30,
                color: AppColors.icon(context),
...
