...
  Widget build(BuildContext context) {
    return AlertDialog(
      title: Row(
        children: [
          Icon(Icons.save_alt, color: AppColors.primary(context),size: 30),
          const SizedBox(width: 8),
          const Text('Salva Itinerario'),
        ],
      ),
      content: Column(
        mainAxisSize: MainAxisSize.min,
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
...
            height: 20,
            child: CircularProgressIndicator(
              strokeWidth: 2,
              color: AppColors.secondary(context),
            ),
          )
              : const Text('Salva'),
        ),
      ],
    );
  }
}
