...
    return Scaffold(
      body: SingleChildScrollView(
        padding: const EdgeInsets.symmetric(horizontal: 0, vertical: 16),
        child: Column(
          children: [
            Text(
              "Personalizza il tuo Viaggio",
              style: TextStyle(
                fontSize: 20,
                color: AppColors.text(context),
                fontWeight: FontWeight.w600,
              ),
              textAlign: TextAlign.center,
...
                    Icons.route,
                    color: isGenerateEnabled
                        ? AppColors.secondary(context)
                        : AppColors.disabledText(context),
                  ),
                  label: Text(
                    _isGenerating ? "Generazione..." : "Genera Itinerario",
                    style: TextStyle(
                      fontSize: 15,
                      fontWeight: FontWeight.w400,
                      color: isGenerateEnabled
                          ? AppColors.secondary(context)
                          : AppColors.disabledText(context),
...
